| Summary: | ASTERISK-24215: testsuite: ARI Live Dangerously test fails due to wrong response code from Asterisk | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2014-08-12 09:49:17 | Date Closed: | 2014-08-17 20:16:09 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Tests/testsuite |
| Versions: | 12.5.0 13.0.0-beta1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When testing the "Live Dangerously" option, the ARI test {{rest_api/danger/safe}} is currently failing due to the {{SHELL}} function being appropriately blocked but returning a {{500 server error: allocation}} instead of ... what used to get returned. In this case, we used to return success and a blank value.
Returning an error is perfectly fine, but an allocation error is probably not correct. Both Asterisk and the test should be updated accordingly. | ||
| Comments: | |||